add authentication logic to signup page, #3

--- a/src/pages/splash/splash.html
+++ b/src/pages/splash/splash.html
@@ -2,7 +2,7 @@
   <img src="../../assets/img/logo.svg" alt="Beer NC Logo" />
   <p>Presented by</p>
   <img src="../../assets/img/gopc.svg" alt="Great Outdoor Provision Company Logo" />
-  <button (click)="goToSignUp()" ion-button block href="#">Sign Up</button>
-  <button (click)="goToSignIn()" ion-button block href="#">Sign In</button>
-  <button (click)="goToHome()" href="#">Skip Sign In</button>
+  <button (click)="goToSignUp()" ion-button block>Sign Up</button>
+  <button (click)="goToSignIn()" ion-button block>Sign In</button>
+  <button (click)="goToHome()">Skip Sign In</button>
 </ion-content>
