--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,18 +1,19 @@
-<!--
-  Generated template for the Signup page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>signup</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+<form [formGroup]="credentials" (ngSubmit)="signup($event);">
+  <ion-item>
+    <ion-label>Name</ion-label>
+    <ion-input type="text" formControlName="fullname" placeholder="Name"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label>Email</ion-label>
+    <ion-input type="email" formControlName="email"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label>Username</ion-label>
+    <ion-input type="username" formControlName="username"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label>Password</ion-label>
+    <ion-input type="password" formControlName="password"></ion-input>
+  </ion-item>
+  <button ion-button type="submit" [disabled]="!credentials.valid">Sign Up</button>
+</form>
