--- a/src/pages/brewery/brewery.html
+++ b/src/pages/brewery/brewery.html
@@ -3,58 +3,66 @@
     <ion-title>{{data.name}}</ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding>
-  <!--<ion-slides pager>
-    <ion-slide *ngFor="let img of data.imgs">
-      {{img}}
-    </ion-slide>
-  </ion-slides>-->
-  <p>{{data.description}}</p>
-  <button ion-button>Check-In</button>
-  <ion-grid>
-    <ion-row>
-      <ion-col width=50>
-        <strong>Get directions</strong>
-        <small>Get some beer</small>
-      </ion-col>
-      <ion-col width=50>
-        <strong>Visit website</strong>
-        <small>{{data.url}}</small>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col width=50>
-        <strong>Call</strong>
-        <small>{{data.tel}}</small>
-      </ion-col>
-      <ion-col width=50>
-        <strong>Open now</strong>
-        <small>{{getTodaysHours()}}</small>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <h2>Amenities</h2>
-  <ion-list>
-    <ion-item *ngFor="let amenity of data.amenities">
-      {{amenity}}
-    </ion-item>
-  </ion-list>
-  <span>{{data.address}}</span>
-  <h2>{{data.numRatings}} Ratings</h2>
-  <ion-list>
-    <ion-item *ngFor="let rating of data.ratings">
-      {{rating.param}}
-      {{rating.value}}
-    </ion-item>
-  </ion-list>
-  <button ion-button block>Rate brewery</button>
-  <h2>Share</h2>
-  <ion-grid>
-    <ion-row>
-      <ion-col width=33>Facebook</ion-col>
-      <ion-col width=33>Twitter</ion-col>
-      <ion-col width=33>Email</ion-col>
-    </ion-row>
-  </ion-grid>
-  <button ion-button block>Bookmark</button>
+<ion-content>
+  <ion-scroll class="img-scrub" scrollX="true" style="width:100vw;height:150px;">
+    <img *ngFor="let img of data.imgs" src="{{img}}" />
+  </ion-scroll>
+  <div padding>
+    <p>{{data.description}}</p>
+    <button ion-button block>Check-In</button>
+    <ion-grid>
+      <ion-row>
+        <ion-col width=50>
+          <div class="brewery-info">
+            <strong>Get directions</strong>
+            <small>Get some beer</small>
+          </div>
+        </ion-col>
+        <ion-col width=50>
+          <div class="brewery-info">
+            <strong>Visit website</strong>
+            <small>{{data.url}}</small>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col width=50>
+          <div class="brewery-info">
+            <strong>Call</strong>
+            <small>{{data.tel}}</small>
+          </div>
+        </ion-col>
+        <ion-col width=50>
+          <div class="brewery-info">
+            <strong>Open now</strong>
+            <small>{{getTodaysHours()}}</small>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <h2>Amenities</h2>
+    <ion-list>
+      <ion-item *ngFor="let amenity of data.amenities">
+        {{amenity}}
+      </ion-item>
+    </ion-list>
+    <span>{{data.address}}</span>
+    <h2>{{data.numRatings}} Ratings</h2>
+    <ion-list>
+      <ion-item *ngFor="let rating of data.ratings">
+        {{rating.param}}
+        {{rating.value}}
+      </ion-item>
+    </ion-list>
+    <button ion-button block>Rate brewery</button>
+    <h2>Share</h2>
+    <ion-grid>
+      <ion-row>
+        <ion-col width=33>Facebook</ion-col>
+        <ion-col width=33>Twitter</ion-col>
+        <ion-col width=33>Email</ion-col>
+      </ion-row>
+    </ion-grid>
+    <button ion-button block>Bookmark</button>
+  </div>
 </ion-content>
