--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -34,8 +34,32 @@
   </div>
   <div class="divider">
     <h2 class="center">Recently Added</h2>
+    <ion-grid>
+      <ion-row>
+        <ion-col *ngFor="let nearbyBrewery of nearbyBreweries" (click)="goToBrewery(nearbyBrewery.id)" width-33>
+          <img src="{{nearbyBrewery.img}}" />
+          <div class="ion-col--inner center">
+            <h3>{{nearbyBrewery.name}}</h3>
+            <span>{{ getDistanceFromCurrent( nearbyBrewery.coords ) }} miles</span>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
   </div>
   <div class="divider">
     <h2 class="center">Top Rated NC Breweries</h2>
+    <ion-grid>
+      <ion-row>
+        <ion-col *ngFor="let nearbyBrewery of nearbyBreweries" (click)="goToBrewery(nearbyBrewery.id)" width-33>
+          <img src="{{nearbyBrewery.img}}" />
+          <div class="ion-col--inner center">
+            <h3>{{nearbyBrewery.name}}</h3>
+            <span>{{ getDistanceFromCurrent( nearbyBrewery.coords ) }} miles</span>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
   </div>
 </ion-content>
