--- a/src/pages/hours/hours.html
+++ b/src/pages/hours/hours.html
@@ -1,18 +1,38 @@
-<!--
-  Generated template for the Hours page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>hours</ion-title>
+    <ion-title>Hours</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
-
+  <h2>{{name}} Hours</h2>
+  <ion-list>
+    <ion-item>
+      <span>Sunday</span>
+      <span [ngClass]="{closed: hours.Sun=='Closed'}" item-right>{{hours.Sun}}</span>
+    </ion-item>
+    <ion-item>
+      <span>Monday</span>
+      <span [ngClass]="{closed: hours.Mon=='Closed'}" item-right>{{hours.Mon}}</span>
+    </ion-item>
+    <ion-item>
+      <span>Tuesday</span>
+      <span [ngClass]="{closed: hours.Tue=='Closed'}" item-right>{{hours.Tue}}</span>
+    </ion-item>
+    <ion-item>
+      <span>Wednesday</span>
+      <span [ngClass]="{closed: hours.Wed=='Closed'}" item-right>{{hours.Wed}}</span>
+    </ion-item>
+    <ion-item>
+      <span>Thursday</span>
+      <span [ngClass]="{closed: hours.Thu=='Closed'}" item-right>{{hours.Thu}}</span>
+    </ion-item>
+    <ion-item>
+      <span>Friday</span>
+      <span [ngClass]="{closed: hours.Fri=='Closed'}" item-right>{{hours.Fri}}</span>
+    </ion-item>
+    <ion-item>
+      <span>Saturday</span>
+      <span [ngClass]="{closed: hours.Sat=='Closed'}" item-right>{{hours.Sat}}</span>
+    </ion-item>
+  </ion-list>
 </ion-content>
