splash z-index bug

--- a/src/pages/splash/splash.html
+++ b/src/pages/splash/splash.html
@@ -7,4 +7,4 @@
   <button (click)="goToSignUp()" ion-button block>Sign Up</button>
   <button (click)="goToSignIn()" ion-button block>Sign In</button>
 </ion-content>
-<fixed-bottom (click)="goToSignUp()" text="Skip Sign In"></fixed-bottom>
+<fixed-bottom (click)="goToHome()" text="Skip Sign In"></fixed-bottom>
