--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -1,18 +1,10 @@
-<!--
-  Generated template for the Nearby page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>nearby</ion-title>
+    <ion-title>Nearby</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
-<ion-content padding>
-
+<ion-content>
+  <div class="divider">
+    <nearby></nearby>
+  </div>
 </ion-content>
