clean up unused imports

--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -7,4 +7,10 @@
   <div class="divider">
     <nearby></nearby>
   </div>
+  <div class="divider">
+    <img src="assets/img/asheville.jpg" />
+  </div>
+  <div class="divider">
+    <gopc-ad></gopc-ad>
+  </div>
 </ion-content>
