add single guide component

--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -14,7 +14,7 @@
     <nearby></nearby>
   </div>
   <div class="divider">
-    <img src="assets/img/asheville.jpg" />
+    <guide></guide>
   </div>
   <div class="divider">
     <gopc-ad></gopc-ad>
