--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,18 +1,22 @@
-<!--
-  Generated template for the Profile page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>profile</ion-title>
-  </ion-navbar>
-
+  <img src="/assets/img/beernc_type_logo.svg" alt="Beer NC Logo" />
 </ion-header>
-
-
 <ion-content padding>
-
+  <div class="divider">
+    <div class="profile-avatar">
+      <img src="{{user.avatar}}" />
+    </div>
+    <div class="profile-name">
+      <strong>{{user.name}}</strong>
+      <small>{{user.username}}</small>
+    </div>
+  </div>
+  <div class="divider">
+    <button block ion-button (click)="goToSettings()">Edit settings</button>
+    <button block ion-button (click)="goToTerms()">Terms &amp; conditions</button>
+  </div>
+  <div class="divider">
+    <button block ion-button (click)="goToFeedback()">Feedback and support</button>
+    <button block ion-button>Log out</button><!-- TODO: add logout provider -->
+  </div>
 </ion-content>
