--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -1,18 +1,46 @@
-<!--
-  Generated template for the Edit page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>edit</ion-title>
+    <ion-title>Edit profile</ion-title>
+    <button ion-button>Save</button><!-- TODO: add POST functionality -->
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-label>Location Settings</ion-label>
+      <ion-toggle></ion-toggle><!-- TODO: add location services opt in/out -->
+    </ion-item>
+    <ion-item>
+      <ion-label>Push notifications</ion-label>
+      <ion-toggle></ion-toggle><!-- TODO: how are push notifications being used? -->
+    </ion-item>
+  </ion-list>
+  <div class="divider">
+    Avatar field
+  </div>
+  <ion-list>
+    <ion-item>
+      <ion-label floating>Name</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>Username</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+  </ion-list>
+  <h2>Private information</h2>
+  <ion-list>
+    <ion-item>
+      <ion-label floating>Email</ion-label>
+      <ion-input type="email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>Change Password</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>Confirm Password</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+  </ion-list>
 </ion-content>
