--- a/src/pages/feedback/feedback.html
+++ b/src/pages/feedback/feedback.html
@@ -1,18 +1,21 @@
-<!--
-  Generated template for the Feedback page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>feedback</ion-title>
+    <ion-title>Feedback and supportk</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
-
+  <form>
+    <ion-list radio-group>
+      <ion-item>
+        <ion-label>Report a problem</ion-label>
+        <ion-radio checked="true" value="report"></ion-radio>
+      </ion-item>
+      <ion-item>
+        <ion-label>Leave feedback</ion-label>
+        <ion-radio value="feedback"></ion-radio>
+      </ion-item>
+    </ion-list>
+    <textarea placeholder="Type your message"></textarea>
+    <button ion-button block>Submit</button>
+  </form>
 </ion-content>
