add GET provider for breweries, move brewery list to component

--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -11,7 +11,7 @@
     </ion-select>
   </div>
   <div class="divider">
-    <nearby></nearby>
+    <brewery-list></brewery-list>
   </div>
   <div class="divider">
     <guide></guide>
