--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,8 +2,12 @@
   <img src="/assets/img/beernc_type_logo.svg" alt="Beer NC Logo" />
 </ion-header>
 <ion-content>
-  <div class="divider">
-    <nearby [showLink]="true"></nearby>
+  <div class="divider" *ngIf="currentPos">
+    <brewery-list [args]="{count:3, lat: getCoords('lat'), lon: getCoords('lon')}"></brewery-list>
+    <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
+  </div>
+  <div class="divider" *ngIf="!currentPos">
+    Loading Nearby Breweries
   </div>
   <div class="divider" *ngIf="guides">
     <h2 class="center">Brewery Guides</h2>
@@ -22,32 +26,12 @@
   </div>
   <div class="divider">
     <h2 class="center">Recently Added</h2>
-    <ion-grid>
-      <ion-row>
-        <ion-col *ngFor="let nearbyBrewery of nearbyBreweries" (click)="goToBrewery(nearbyBrewery.id)" width-33>
-          <img src="{{nearbyBrewery.img}}" />
-          <div class="ion-col--inner center">
-            <h3>{{nearbyBrewery.name}}</h3>
-            <span>{{ getDistanceFromCurrent( nearbyBrewery.coords ) }} miles</span>
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <brewery-list [args]="{count:3}"></brewery-list>
     <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
   </div>
   <div class="divider">
     <h2 class="center">Top Rated NC Breweries</h2>
-    <ion-grid>
-      <ion-row>
-        <ion-col *ngFor="let nearbyBrewery of nearbyBreweries" (click)="goToBrewery(nearbyBrewery.id)" width-33>
-          <img src="{{nearbyBrewery.img}}" />
-          <div class="ion-col--inner center">
-            <h3>{{nearbyBrewery.name}}</h3>
-            <span>{{ getDistanceFromCurrent( nearbyBrewery.coords ) }} miles</span>
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <brewery-list [args]="{count:3, order: 'top'}"></brewery-list>
     <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
   </div>
 </ion-content>
