--- a/src/pages/brewery/brewery.html
+++ b/src/pages/brewery/brewery.html
@@ -5,10 +5,10 @@
 </ion-header>
 <ion-content>
   <ion-scroll class="img-scrub" scrollX="true" style="width:100vw;height:150px;">
-    <img *ngFor="let img of data.imgs" src="{{img}}" />
+    <img *ngFor="let img of dummyData.imgs" src="{{img}}" />
   </ion-scroll>
   <div padding>
-    <p>{{data.description}}</p>
+    <p>{{dummyData.description}}</p>
     <button ion-button block>Check-In</button>
     <ion-grid>
       <ion-row>
@@ -21,7 +21,7 @@
         <ion-col width-50>
           <div class="brewery-info" (click)="openWebsite(data.url)">
             <strong>Visit website</strong>
-            <small>{{data.url | removehttp}}</small>
+            <small>{{data.breweryData.brewery_website | removehttp}}</small>
           </div>
         </ion-col>
       </ion-row>
@@ -29,7 +29,7 @@
         <ion-col width-50>
           <div class="brewery-info"><!--TODO: figure out how to dial natively-->
             <strong>Call</strong>
-            <small>{{data.tel}}</small>
+            <small>{{data.breweryData.brewery_phone}}</small>
           </div>
         </ion-col>
         <ion-col width-50>
@@ -40,29 +40,53 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-    <h2>Amenities</h2>
-    <ion-list>
-      <ion-item *ngFor="let amenity of data.amenities">
+  </div>
+  <div class="divider" padding>
+    <h2 class="center">Amenities</h2>
+    <ion-list class="ion-list-col2">
+      <ion-item *ngFor="let amenity of dummyData.amenities">
         {{amenity}}
       </ion-item>
     </ion-list>
-    <span>{{data.address}}</span>
+  </div>
+  <div class="divider">
+    <gopc-ad></gopc-ad>
+  </div>
+  <div>
+    <span class="center">{{data.breweryData.brewery_formatted_address}}</span>
+  </div>
+  <div padding>
     <h2>{{data.numRatings}} Ratings</h2>
     <ion-list>
-      <ion-item *ngFor="let rating of data.ratings">
+      <ion-item *ngFor="let rating of dummyData.ratings">
         {{rating.param}}
         {{rating.value}}
       </ion-item>
     </ion-list>
     <button ion-button block (click)="openRating()">Rate brewery</button>
-    <h2>Share</h2>
+    <h2 class="center">Share</h2>
     <ion-grid>
       <ion-row>
-        <ion-col width=33>Facebook</ion-col>
-        <ion-col width=33>Twitter</ion-col>
-        <ion-col width=33>Email</ion-col>
+        <ion-col width=33>
+          <div class="brewery-info brewery-info--social">
+            <ion-icon ios="logo-facebook" md="logo-facebook"></ion-icon>
+            Facebook
+          </div>
+        </ion-col>
+        <ion-col width=33>
+          <div class="brewery-info brewery-info--social">
+            <ion-icon ios="logo-twitter"></ion-icon>
+            Twitter
+          </div>
+        </ion-col>
+        <ion-col width=33>
+          <div class="brewery-info brewery-info--social">
+            <ion-icon name="mail"></ion-icon>
+            Email
+          </div>
+        </ion-col>
       </ion-row>
     </ion-grid>
-    <button ion-button block>Bookmark</button>
+    <button ion-button block class="brewery-info">Bookmark</button>
   </div>
 </ion-content>
