add map to brewery page

--- a/src/pages/brewery/brewery.html
+++ b/src/pages/brewery/brewery.html
@@ -54,6 +54,7 @@
   </div>
   <div>
     <span class="center">{{data.breweryData.brewery_formatted_address}}</span>
+    <div #map id="map"></div>
   </div>
   <div padding>
     <h2>{{data.numRatings}} Ratings</h2>
