--- a/src/pages/rating/rating.html
+++ b/src/pages/rating/rating.html
@@ -1,18 +1,20 @@
-<!--
-  Generated template for the Rating page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>rating</ion-title>
+    <ion-title>{{name}}</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
-
+  <div class="divider">
+    <p>How was your experience at {{name}}?</p>
+  </div>
+  <form class="rating-form" padding>
+    <div class="rating-group" *ngFor="let rating of ratings">
+      <h2 class="center">{{rating.param}}</h2>
+      <span class="rating-array" *ngFor="let i of [1,2,3,4,5]">
+        <input type="radio" name="{{rating.param}}" value="{{i}}" (click)="handleRating(rating.param, i)">
+        <span [class.highlighted]="i <= rating.value"></span>
+      </span>
+    </div>
+    <button type="submit" ion-button block (click)="handleSubmit()">Finish</button>
+  </form>
 </ion-content>
