--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,16 +1,12 @@
 <ion-content padding>
-  <form [formGroup]="credentials" (ngSubmit)="signup($event);">
+  <form [formGroup]="credentials" (ngSubmit)="onSubmit($event);">
     <ion-item>
-      <ion-label>Name</ion-label>
-      <ion-input type="text" formControlName="fullname" placeholder="Name"></ion-input>
+      <ion-label>Username</ion-label>
+      <ion-input type="text" formControlName="username" placeholder="username"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Email</ion-label>
       <ion-input type="email" formControlName="email"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label>Username</ion-label>
-      <ion-input type="username" formControlName="username"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Password</ion-label>
@@ -19,4 +15,4 @@
     <button ion-button type="submit" [disabled]="!credentials.valid">Sign Up</button>
   </form>
 </ion-content>
-<fixed-bottom click="goToSignIn()" text="Already have an account? Sign in"></fixed-bottom>
+<fixed-bottom (click)="goToSignIn()" text="Already have an account? Sign in"></fixed-bottom>
