--- a/src/pages/breweries/breweries.html
+++ b/src/pages/breweries/breweries.html
@@ -1,18 +1,8 @@
-<!--
-  Generated template for the Breweries page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>breweries</ion-title>
+    <ion-title>Breweries</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
-
+  <brewery-list [args]="{count:12}"></brewery-list>
 </ion-content>
