--- a/src/pages/brewery/brewery.html
+++ b/src/pages/brewery/brewery.html
@@ -21,7 +21,7 @@
         <ion-col width-50>
           <div class="brewery-info" (click)="openWebsite(data.url)">
             <strong>Visit website</strong>
-            <small>{{data.breweryData.brewery_website | removehttp}}</small>
+            <small>{{data.url | removehttp}}</small>
           </div>
         </ion-col>
       </ion-row>
@@ -29,7 +29,7 @@
         <ion-col width-50>
           <div class="brewery-info"><!--TODO: figure out how to dial natively-->
             <strong>Call</strong>
-            <small>{{data.breweryData.brewery_phone}}</small>
+            <small>{{data.tel}}</small>
           </div>
         </ion-col>
         <ion-col width-50>
@@ -53,11 +53,11 @@
     <gopc-ad></gopc-ad>
   </div>
   <div>
-    <span class="center">{{data.breweryData.brewery_formatted_address}}</span>
+    <span class="center">{{data.breweryAddress}}</span>
     <div #map id="map"></div>
   </div>
   <div padding>
-    <h2>{{data.numRatings}} Ratings</h2>
+    <h2>{{dummyData.numRatings}} Ratings</h2>
     <ion-list>
       <ion-item *ngFor="let rating of dummyData.ratings">
         <span item-left>{{rating.param}}</span>
