add breweries template

--- a/src/pages/breweries/breweries.html
+++ b/src/pages/breweries/breweries.html
@@ -4,5 +4,22 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <brewery-list [args]="{count:12}"></brewery-list>
+  <ion-segment [(ngModel)]="show">
+    <ion-segment-button value="nearby">Nearby</ion-segment-button>
+    <ion-segment-button value="all">All</ion-segment-button>
+    <ion-segment-button value="saved">Saved</ion-segment-button>
+  </ion-segment>
+  <div [ngSwitch]="show" padding>
+    <div *ngSwitchCase="'nearby'">
+      <p *ngIf="!currentPos">Loading breweries</p>
+      <brewery-list-full *ngIf="currentPos" [args]="{count:12, lat: currentPos.lat, lon: currentPos.lon}"></brewery-list-full>
+    </div>
+    <div *ngSwitchCase="'all'">
+      <brewery-list-full [args]="{count:-1}"></brewery-list-full>
+    </div>
+    <div *ngSwitchCase="'saved'">
+      <p *ngIf="!userId">Loading breweries</p>
+      <brewery-list-full *ngIf="userId" [args]="{count:12, userId: userId}"></brewery-list-full>
+    </div>
+  </div>
 </ion-content>
