--- a/src/pages/brewery/brewery.html
+++ b/src/pages/brewery/brewery.html
@@ -35,7 +35,7 @@
         <ion-col width-50>
           <div class="brewery-info" (click)="openHours()">
             <strong>Open now</strong>
-            <small>{{getTodaysHours()}}</small>
+            <small>{{data.breweryHours | todayshours}}</small>
           </div>
         </ion-col>
       </ion-row>
