--- a/src/pages/rating/rating.html
+++ b/src/pages/rating/rating.html
@@ -15,6 +15,6 @@
         <span [class.highlighted]="i <= rating.value"></span>
       </span>
     </div>
-    <button type="submit" ion-button block (click)="handleSubmit()">Finish</button>
+    <button type="submit" ion-button block (click)="handleSubmit()" color="dark">Finish</button>
   </form>
 </ion-content>
