--- a/src/pages/hours/hours.html
+++ b/src/pages/hours/hours.html
@@ -8,31 +8,31 @@
   <ion-list>
     <ion-item>
       <span>Sunday</span>
-      <span [ngClass]="{closed: !hours.Sunday}" item-right>{{hours.Sunday || 'Closed'}}</span>
+      <span [ngClass]="{closed: hours.Sunday === 'Closed'}" item-right>{{hours.Sunday || 'Closed'}}</span>
     </ion-item>
     <ion-item>
       <span>Monday</span>
-      <span [ngClass]="{closed: !hours.Monday}" item-right>{{hours.Monday || 'Closed'}}</span>
+      <span [ngClass]="{closed: hours.Monday === 'Closed'}" item-right>{{hours.Monday || 'Closed'}}</span>
     </ion-item>
     <ion-item>
       <span>Tuesday</span>
-      <span [ngClass]="{closed: !hours.Tuesday}" item-right>{{hours.Tuesday || 'Closed'}}</span>
+      <span [ngClass]="{closed: hours.Tuesday === 'Closed'}" item-right>{{hours.Tuesday || 'Closed'}}</span>
     </ion-item>
     <ion-item>
       <span>Wednesday</span>
-      <span [ngClass]="{closed: !hours.Wednesday}" item-right>{{hours.Wednesday || 'Closed'}}</span>
+      <span [ngClass]="{closed: hours.Wednesday === 'Closed'}" item-right>{{hours.Wednesday || 'Closed'}}</span>
     </ion-item>
     <ion-item>
       <span>Thursday</span>
-      <span [ngClass]="{closed: !hours.Thursday}" item-right>{{hours.Thursday || 'Closed'}}</span>
+      <span [ngClass]="{closed: hours.Thursday === 'Closed'}" item-right>{{hours.Thursday || 'Closed'}}</span>
     </ion-item>
     <ion-item>
       <span>Friday</span>
-      <span [ngClass]="{closed: !hours.Friday}" item-right>{{hours.Friday || 'Closed'}}</span>
+      <span [ngClass]="{closed: hours.Friday === 'Closed'}" item-right>{{hours.Friday || 'Closed'}}</span>
     </ion-item>
     <ion-item>
       <span>Saturday</span>
-      <span [ngClass]="{closed: !hours.Saturday}" item-right>{{hours.Saturday || 'Closed'}}</span>
+      <span [ngClass]="{closed: hours.Saturday === 'Closed'}" item-right>{{hours.Saturday || 'Closed'}}</span>
     </ion-item>
   </ion-list>
 </ion-content>
