--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -1,7 +1,5 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Nearby</ion-title>
-  </ion-navbar>
+  <app-header></app-header>
 </ion-header>
 <ion-content>
   <div class="nearby-selector">
