--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <img src="/assets/img/beernc_type_logo.svg" alt="Beer NC Logo" />
+  <app-header></app-header>
 </ion-header>
 <ion-content padding>
   <div class="divider">
