--- a/src/pages/guides/guides.html
+++ b/src/pages/guides/guides.html
@@ -1,18 +1,6 @@
-<!--
-  Generated template for the Guides page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>guides</ion-title>
-  </ion-navbar>
-
+  <app-header></app-header>
 </ion-header>
-
-
 <ion-content padding>
-
+  <h2 class="center">Brewery Guides</h2>
 </ion-content>
