--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,20 +1,23 @@
 <ion-header>
-  <img src="/assets/img/beernc_type_logo.svg" alt="Beer NC Logo" />
+  <app-header></app-header>
 </ion-header>
 <ion-content>
-  <div class="divider" *ngIf="currentPos">
-    <brewery-list [args]="{count:3, lat: currentPos.lat, lon: currentPos.lon}"></brewery-list>
-    <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
-  </div>
-  <div class="divider" *ngIf="!currentPos">
-    Loading Nearby Breweries
+  <div class="divider">
+    <h2 class="center">Nearby Locations</h2>
+    <div *ngIf="currentPos">
+      <brewery-list *ngIf="currentPos" [args]="{count:3, lat: currentPos.lat, lon: currentPos.lon}"></brewery-list>
+      <a block class="center link link--large" (click)="goToNearby($event)">See More</a>
+    </div>
+    <p *ngIf="!currentPos" class="center">Loading Nearby Breweries</p>
   </div>
   <div class="divider" *ngIf="guides">
     <h2 class="center">Brewery Guides</h2>
     <ion-grid>
       <ion-row>
         <ion-col *ngFor="let guide of guides" width-33>
-          <img src="{{guide.img}}" />
+          <div class="imgWrapper">
+            <img src="{{guide.img}}" />
+          </div>
           <h3 class="center">{{guide.name}}</h3>
         </ion-col>
       </ion-row>
