add guides provider

--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -12,7 +12,7 @@
     <brewery-list></brewery-list>
   </div>
   <div class="divider">
-    <guide></guide>
+    <guide [data]="{id: 1, title: 'Greensboro', img: 'assets/img/greensboro.jpg'}"></guide>
   </div>
   <div class="divider">
     <gopc-ad></gopc-ad>
