--- a/src/pages/guide/guide.html
+++ b/src/pages/guide/guide.html
@@ -1,18 +1,8 @@
-<!--
-  Generated template for the Guide page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>guide</ion-title>
+    <ion-title>{{data.title}}</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
-
+  <div *ngIf="content" (click)="handleContentClick($event)" [innerHTML]="content | safeHtml"></div>
 </ion-content>
