fix lon/lng stuff

--- a/src/pages/nearby/nearby.html
+++ b/src/pages/nearby/nearby.html
@@ -8,7 +8,7 @@
       {{selectedCity}}
     </div>
     <div class="divider">
-      <brewery-list [args]="{count:3, lat: coords.lat, lon: coords.lon}"></brewery-list>
+      <brewery-list [args]="{count:3, lat: coords.lat, lng: coords.lon}"></brewery-list>
     </div>
     <div class="divider">
       <guide [data]="{id: 1, title: 'Greensboro', img: 'assets/img/greensboro.jpg'}"></guide>
