add avatar selection

--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -16,7 +16,7 @@
     </ion-item>
   </ion-list>
   <div class="divider">
-    Avatar field
+    <avatar-upload></avatar-upload>
   </div>
   <ion-list>
     <ion-item>
