add unit tests for edit page

--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -21,18 +21,18 @@
   <ion-list>
     <ion-item>
       <ion-label floating>Name</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" value="{{credentials.name}}"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label floating>Username</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" value={{credentials.username}}></ion-input>
     </ion-item>
   </ion-list>
   <h2>Private information</h2>
   <ion-list>
     <ion-item>
       <ion-label floating>Email</ion-label>
-      <ion-input type="email"></ion-input>
+      <ion-input type="email" value="{{credentials.email}}"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label floating>Change Password</ion-label>
