add user avatar output

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -3,12 +3,12 @@
 </ion-header>
 <ion-content padding>
   <div class="divider">
-    <div class="profile-avatar">
-      <img src="{{dummyUser.avatar}}" />
+    <div class="icon-avatar">
+      <img src="{{userInfo.avatar}}" />
     </div>
     <div class="profile-name">
-      <strong>{{dummyUser.name}}</strong>
-      <small>{{dummyUser.username}}</small>
+      <strong>{{userInfo.name}}</strong>
+      <small>{{userInfo.username}}</small>
     </div>
   </div>
   <div class="divider">
