--- a/src/pages/breweries/breweries.html
+++ b/src/pages/breweries/breweries.html
@@ -11,7 +11,7 @@
   <div [ngSwitch]="show" padding>
     <div *ngSwitchCase="'nearby'">
       <p *ngIf="!currentPos">Loading breweries</p>
-      <brewery-list-full *ngIf="currentPos" [args]="{orderby: 'nearby', lat: currentPos.lat, lng: currentPos.lng}"></brewery-list-full>
+      <brewery-list-full *ngIf="currentPos" [args]="{orderby: 'nearby', lat: currentPos.lat, lng: currentPos.lng}" (loaded)="dismissLoader()"></brewery-list-full>
     </div>
     <div *ngSwitchCase="'all'">
       <brewery-list-full [args]="{orderby: 'name'}"></brewery-list-full>
